import org.gradle.api.tasks.testing.logging.TestExceptionFormat

plugins {
	alias(libs.plugins.java)
	alias(libs.plugins.spring)
	alias(libs.plugins.spring.dependency.management)
}

group = 'com.bank.transactions'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation libs.spring.web
	implementation libs.spring.validation

	implementation libs.lombok
	annotationProcessor libs.lombok

	testImplementation libs.spring.test
}

test {
	jvmArgs([
			'--enable-preview',
			'--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
			'--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
			'--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
			'--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
			'--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
			'--add-opens', 'jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
			'--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
			'--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
			'--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
	])
	useJUnitPlatform()
	systemProperty "junit.jupiter.extensions.autodetection.enabled", "true"
	testLogging {
		showStandardStreams = true
		exceptionFormat TestExceptionFormat.FULL
		showExceptions true
		showCauses true
		showStackTraces true
	}
}
